# scraper

./: .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml  scraper_insight.md  setup.py
.claude/: settings.local.json
.github/workflows/: linting.yml  tests.yml  type-checking.yml
crudadmin_data/: admin.db
docker/worker/: Dockerfile  start.sh
docs/: captcha_resolver_backend.md  captcha_resolver_frontend.md  community.md  index.md  scraper_frontend_integration.md
docs/getting-started/: first-run.md  index.md  installation.md
docs/user-guide/: development.md  production.md
docs/user-guide/admin-panel/: adding-models.md
docs/user-guide/api/: endpoints.md  exceptions.md  index.md  pagination.md  versioning.md
docs/user-guide/authentication/: permissions.md
docs/user-guide/caching/: client-cache.md  redis-cache.md
docs/user-guide/configuration/: docker-setup.md
docs/user-guide/database/: crud.md  schemas.md
docs/user-guide/rate-limiting/: index.md
scripts/: test_botasaurus.py  test_chimera.py  test_nodriver.py  test_scrapling_e2e.py  test_seleniumbase_e2e.py  test_titan_e2e.py
src/: .env.local
src/app/: main.py
src/app/admin/: initialize.py  views.py
src/app/api/: __init__.py  dependencies.py
src/app/api/v1/: __init__.py  captcha.py  health.py  login.py  posts.py  rate_limits.py  scraper.py  tasks.py  tiers.py  users.py  ws.py
src/app/core/: config.py  security.py  setup.py
src/app/core/utils/: cache.py  rate_limit.py
src/app/core/worker/: functions.py  settings.py
src/app/crud/: crud_rate_limit.py
src/app/models/: __init__.py  captcha.py  post.py  rate_limit.py  tier.py
src/app/schemas/: captcha.py  post.py  scraper.py
src/app/services/: __init__.py
src/app/services/captcha/: __init__.py  proxy_engine.py  pubsub.py  session_service.py  worker_integration.py
src/app/services/titan/: __init__.py  browser.py  engine.py  exceptions.py  metrics.py  orchestrator.py  request.py  session_cache.py  utils.py
src/app/services/titan/tiers/: __init__.py  base.py  tier1_request.py  tier2_browser_request.py  tier3_full_browser.py
src/app/services/titan/tiers/botasaurus/: __init__.py  browser_client.py  exceptions.py  executor.py  request_client.py
src/app/services/titan/tiers/botasaurus/config/: __init__.py  databank.json  tier2.py
src/app/services/titan/tiers/chimera/: __init__.py  client.py  exceptions.py  executor.py  proxy_rotator.py  state_store.py  swarm.py
src/app/services/titan/tiers/chimera/config/: __init__.py  base.py  databank.json  tier1.py
src/app/services/titan/tiers/drissionpage/: __init__.py  dp_client.py  exceptions.py  executor.py
src/app/services/titan/tiers/drissionpage/config/: __init__.py  databank.json  tier6.py
src/app/services/titan/tiers/hitl/: __init__.py  exceptions.py  executor.py  harvester.py  streaming.py
src/app/services/titan/tiers/hitl/config/: __init__.py  databank.json  tier7.py
src/app/services/titan/tiers/nodriver/: __init__.py  browser_client.py  exceptions.py  executor.py
src/app/services/titan/tiers/nodriver/config/: __init__.py  databank.json  tier3.py
src/app/services/titan/tiers/scrapling/: __init__.py  exceptions.py  executor.py  stealthy_client.py
src/app/services/titan/tiers/scrapling/config/: __init__.py  databank.json  tier4.py
src/app/services/titan/tiers/seleniumbase/: __init__.py  cdp_client.py  exceptions.py  executor.py
src/app/services/titan/tiers/seleniumbase/config/: __init__.py  databank.json  tier5.py
src/migrations/versions/: 115759dc7142_.py  486b83214eac_.py  8f3a2b4c5d6e_add_captcha_task.py  a1b2c3d4e5f6_update_captcha_task_for_resolver.py
src/scripts/: create_first_superuser.py
tests/: conftest.py  test_user.py
tests/api/: __init__.py  test_captcha.py  test_scraper.py
tests/helpers/: generators.py
tests/services/: test_captcha_services.py
tests/services/titan/: __init__.py  test_engine.py  test_exceptions.py  test_orchestrator.py  test_tiers.py  test_utils.py
