[project]
name = "fastapi-boilerplate"
version = "0.1.0"
description = "Batteries-included FastAPI starter with production-ready defaults, optional modules, and clear docs."
authors = [{ name = "Benav Labs", email = "contact@benav.io" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11, <4"
dependencies = [
    # ============================================
    # Core FastAPI & Web Framework
    # ============================================
    "python-dotenv>=1.0.0",
    "pydantic[email]>=2.6.1",
    "pydantic-settings>=2.0.3",
    "fastapi>=0.109.1",
    "uvicorn>=0.27.0",
    "uvloop>=0.19.0",
    "httptools>=0.6.1",
    "python-multipart>=0.0.9",
    "gunicorn>=23.0.0",

    # ============================================
    # Database & ORM
    # ============================================
    "SQLAlchemy>=2.0.25",
    "SQLAlchemy-Utils>=0.41.1",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "greenlet>=2.0.2",
    "fastcrud>=0.19.2",
    "crudadmin>=0.4.2",

    # ============================================
    # Authentication & Security
    # ============================================
    "python-jose>=3.3.0",
    "bcrypt>=4.1.1",

    # ============================================
    # Cache & Background Jobs
    # ============================================
    "redis>=5.0.1",
    "arq>=0.25.0",

    # ============================================
    # HTTP Client & Utilities
    # ============================================
    "httpx>=0.26.0",
    "uuid>=1.30",
    "uuid6>=2024.1.12",

    # ============================================
    # Monitoring & Observability
    # ============================================
    "prometheus-client>=0.21.0",
    "tenacity>=8.2.0",

    # ============================================
    # Code Quality (Linting & Type Checking)
    # ============================================
    "ruff>=0.11.13",
    "mypy>=1.16.0",

    # ============================================
    # TITAN SCRAPER - 7-Tier Execution System
    # ============================================

    # Tier 1: curl_cffi @request (fast HTTP, TLS fingerprinting)
    "curl-cffi>=0.7.0",

    # Tier 1-2: Botasaurus (@request + @browser decorators)
    "botasaurus>=4.0.0",
    "botasaurus-driver>=4.0.0",

    # Tier 3: nodriver (async CDP, no webdriver, cf_verify)
    "nodriver>=0.39",

    # Tier 4: Scrapling + Camoufox (stealth browser, CF bypass)
    "scrapling[all]>=0.2.9",

    # Tier 5: SeleniumBase (UC Mode, CDP Mode, CAPTCHA solving)
    "seleniumbase>=4.32.0",

    # Tier 6: DrissionPage (no webdriver, iframe/shadow-root)
    "DrissionPage>=4.1.0",

    # Tier 3 Optional: OpenCV for nodriver cf_verify checkbox solving
    "opencv-python>=4.9.0",

    # WebSocket support for Tier 7 HITL streaming
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.23.0",
    "faker>=26.0.0",
    "mypy>=1.8.0",
    "types-redis>=4.6.0",
    "ruff>=0.1.0",
    "pre-commit>=3.6.0",
    "black>=24.0.0",
    "isort>=5.13.0",
]

# ============================================
# Tier-specific optional dependencies
# Install only the tiers you need:
#   uv pip install -e ".[tier1]"
#   uv pip install -e ".[tier1,tier3]"
#   uv pip install -e ".[all-tiers]"
# ============================================

# Tier 1: Fast HTTP requests with TLS fingerprinting
tier1 = [
    "curl-cffi>=0.7.0",
    "botasaurus>=4.0.0",
]

# Tier 2: Browser session + HTTP requests
tier2 = [
    "botasaurus>=4.0.0",
    "botasaurus-driver>=4.0.0",
]

# Tier 3: Full browser rendering with nodriver
tier3 = [
    "nodriver>=0.39",
    "opencv-python>=4.9.0",
]

# Tier 4: Stealth browser with Camoufox
tier4 = [
    "scrapling[all]>=0.2.9",
]

# Tier 5: SeleniumBase UC Mode + CDP Mode
tier5 = [
    "seleniumbase>=4.32.0",
]

# Tier 6: DrissionPage (no webdriver)
tier6 = [
    "DrissionPage>=4.1.0",
]

# Tier 7: HITL Bridge (uses Tier 6 + WebSocket)
tier7 = [
    "DrissionPage>=4.1.0",
    "websockets>=12.0",
]

# All tiers combined
all-tiers = [
    "curl-cffi>=0.7.0",
    "botasaurus>=4.0.0",
    "botasaurus-driver>=4.0.0",
    "nodriver>=0.39",
    "opencv-python>=4.9.0",
    "scrapling[all]>=0.2.9",
    "seleniumbase>=4.32.0",
    "DrissionPage>=4.1.0",
    "websockets>=12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/"]

[tool.hatch.build.targets.wheel]
include = ["src/"]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "F", # Pyflakes
    # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "E", # pycodestyle
    "W", # Warning
    # https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    # https://docs.astral.sh/ruff/rules/#mccabe-c90
    "C", # Complexity (mccabe+) & comprehensions
    # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "UP", # pyupgrade
    # https://docs.astral.sh/ruff/rules/#isort-i
    "I", # isort
]
ignore = [
    # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "E402", # module level import not at top of file
    # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "UP006", # use-pep585-annotation
    "UP007", # use-pep604-annotation
    "E741",  # Ambiguous variable name
    # "UP035", # deprecated-assertion
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401", # unused import
    "F403", # star imports
]

[tool.ruff.lint.mccabe]
max-complexity = 24

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::PendingDeprecationWarning:starlette.formparsers",
]

[dependency-groups]
dev = [
    "faker>=37.3.0",
    "pre-commit>=4.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest>=7.4.2",
    "pytest-mock>=3.14.0",
    "black>=24.0.0",
    "isort>=5.13.0",
]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["src"]
skip_gitignore = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "src.app.*"
disallow_untyped_defs = true
